--- a/src/app/flashquote/form/form.component.html
+++ b/src/app/flashquote/form/form.component.html
@@ -1,8 +1,12 @@
-<form (ngSubmit)="onSubmit()" class="max-w-2xl">
-    <ng-container *ngFor="let question of questions;">
-        <app-question-base class="question" [formGroup]="form" [question]="question" [questionType]="questionTypes[question.id].type">
-        </app-question-base>
-    </ng-container>
-    <button type="submit"
-        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Soumettre</button>
+<form (ngSubmit)="onSubmit()">
+  <ng-container *ngFor="let question of questions">
+    <app-question-base
+      class="question"
+      [formGroup]="form"
+      [question]="question"
+      [questionType]="questionTypes[question.id].type"
+    >
+    </app-question-base>
+  </ng-container>
+  <button type="submit" mat-raised-button color="primary">Soumettre</button>
 </form>
