--- a/src/app/flashquote/home/home.component.html
+++ b/src/app/flashquote/home/home.component.html
@@ -1,2 +1,4 @@
-<h1>Page du flashquote</h1>
-<app-form></app-form>
+<main class="container">
+    <h1>Page du flashquote</h1>
+    <app-form></app-form>
+</main>
